translation - show video

--- a/GPT4-Version/templates/show_video.html
+++ b/GPT4-Version/templates/show_video.html
@@ -8,13 +8,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>Vidéo Créée</h1>
+            <h1>Video created</h1>
         </header>
         <video width="640" height="480" controls>
             <source src="{{ video_path }}" type="video/mp4">
-            Votre navigateur ne supporte pas l'élément vidéo.
+            Your browser doesn't support this video element.
         </video>
-        <a href="{{ url_for('index') }}">Retour à l'accueil</a>
+        <a href="{{ url_for('index') }}">Back to homepage</a>
     </div>
 </body>
 </html>
