--- a/GPT4-Version/templates/show_video.html
+++ b/GPT4-Version/templates/show_video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Show Video</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='show_video.css') }}">
 </head>
 <body>
     <div class="container">
